--- a/pages/postulate.html
+++ b/pages/postulate.html
@@ -62,7 +62,7 @@
     </div>
    
    
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12"></div>
           <div>
