cambios generales nav

--- a/pages/postulate.html
+++ b/pages/postulate.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="ADOPCION, POTULAR, POSTULATE, PERRO, GATO, CACHORRO, NUEVA OPORTUNIDAD, PERRO ADULTO">
+    <meta name="description" content="Animate a sumarte a nuestro staff. Todo grano de arena ayuda a seguir creciendo">
     <title>Refugio Pepito</title>
     <link rel="shortcut icon" href="../img/dogs-5921796_960_720.webp" type="image/x-icon">
     <!-- Bootstrap -->
