cambio nombre hogar

--- a/pages/postulate.html
+++ b/pages/postulate.html
@@ -64,7 +64,7 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12"></div>
           <div>
-            <h2>Sumate a la Red de Hogares de Tránsito de REFUGIO ANIMAL
+            <h2>Sumate a la Red de Hogares de Tránsito de TERRITORIO ANIMAL
              </h2>
              <h3>Requisitos:</h3>
              <h4>
