cambio nombre titulo

--- a/pages/dona.html
+++ b/pages/dona.html
@@ -105,7 +105,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Mercadopago</h5>
                       <p class="card-text">Doná a través de MERCADOPAGO
-                        Nuestro alias es RefugioAnimal.mp
+                        Nuestro alias es TerritorioAnimal.mp
                         (Todas las tarjetas de crédito y débito, Pago Fácil, Rapipago, Link, Banelco o desde la APP)</p>
                       <a href="#" class="btn btn-primary">+ info</a>
                     </div>
@@ -119,7 +119,7 @@
                       <p class="card-text">Depósito o transferencia Bancaria
                         Banco Provincia
                         CBU: 0140059501385734098723
-                        Alias: Refugio-Animal
+                        Alias: Territorio-Animal
                         Tel: 1123456789
                         cp 1428</p>
                       <a href="#" class="btn btn-primary">+info</a>
