--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -70,7 +70,7 @@
                  <div class="col-md-8">
                    <div class="card-body">
                      <h2 class="card-title">Territorio Animal</h2>
-                     <p class="card-text h5 ">Nuestra misión en Territorio Animal (TA) es una organización sin fines de lucro liderada por un grupo de voluntarios que buscan superar la situación de sobrepoblación, abandono, crueldad e indiferencia que viven millones de animales en nuestro país. (Buenos Aires/ Argentina). Propiciamos una actitud de respeto hacia todas las especies, entendiendo que no son “cosas” para ser utilizadas por el ser humano. Rechazamos todo tipo de explotación animal, incluyendo su uso como vestimenta, comida, entretenimiento y experimentación.
+                     <p class="card-text h5 ">Nuestra misión Territorio Animal (TA) es una organización sin fines de lucro liderada por un grupo de voluntarios que buscan superar la situación de sobrepoblación, abandono, crueldad e indiferencia que viven millones de animales en nuestro país. (Buenos Aires/ Argentina). Propiciamos una actitud de respeto hacia todas las especies, entendiendo que no son “cosas” para ser utilizadas por el ser humano. Rechazamos todo tipo de explotación animal, incluyendo su uso como vestimenta, comida, entretenimiento y experimentación.
                      </p>
                      
                    </div>
