cambios de error quienesomos

--- a/pages/postulate.html
+++ b/pages/postulate.html
@@ -89,6 +89,13 @@
         </div>
         
     </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12 mt-5 h1 color-text text-center">
+          <p><ins>Completar formulario:</ins></p>
+        </div>
+      </div>
+    </div>
 
    
    <div class="container-fluid marginubi ">
