--- a/pages/dona.html
+++ b/pages/dona.html
@@ -107,7 +107,7 @@
     <div class="container-fluid pagostam ">
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 border-start border-bottom border-top border-end bordercolor flex ">
-                <div data-aos="flip-left" class="card border-3 " style="width: 18rem;">
+                <div data-aos="flip-left" class="card cardp border-3 " style="width: 18rem;">
                     <img  src="../img/mercadopago.jpg" class="card-img-top imgpagos" alt="Mercadopago">
                     <div class="card-body">
                       <h5 class="card-title">Mercadopago</h5>
@@ -119,7 +119,7 @@
                   </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4 border-start border-bottom border-top border-end bordercolor flex ">
-                <div data-aos="flip-left" class="card" style="width: 18rem;">
+                <div data-aos="flip-left" class="card cardp" style="width: 18rem;">
                     <img src="../img/transferenciabancaria.png" class="card-img-top imgpagos" alt="Transferencia">
                     <div class="card-body">
                       <h5 class="card-title">Transferencia</h5>
@@ -134,7 +134,7 @@
                   </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4 border-start border-bottom border-top border-end bordercolor flex ">
-                <div data-aos="flip-left" class="card" style="width: 18rem;">
+                <div data-aos="flip-left" class="card cardp" style="width: 18rem;">
                     <img src="../img/paypal.jpg" class="card-img-top imgpagos" alt="Paypal">
                     <div class="card-body">
                       <h5 class="card-title">Paypal</h5>
