--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -69,14 +69,14 @@
     <div class="container ">
       <div class="row ">
        <div class="col-sm-12 col-md-12 col-lg-12 bordercolor flex2  ">
-           <div  data-aos="zoom-in" class="card mb-3  " style="max-width: 540px;">
+           <div  data-aos="zoom-in" class="card carq mb-3  " style="max-width: 540px;">
                <div class="row g-0 ">
                  <div class="col-md-4 flex-q ">
                    <img class="imgq" src="../img/Perroquienessomos2.jpg" class="img-fluid rounded-start" alt="...">
                    <img class="imgq" src="../img/Perroquienessomos1.webp" alt="...">
                    
                  </div>
-                 <div class="col-md-8 ">
+                 <div class="col-md-8  ">
                    <div class="card-body">
                      <h2 class="card-title">Territorio Animal</h2>
                      <p class="card-text h5 ">Nuestra misión Territorio Animal (TA) es una organización sin fines de lucro liderada por un grupo de voluntarios que buscan superar la situación de sobrepoblación, abandono, crueldad e indiferencia que viven millones de animales en nuestro país. (Buenos Aires/ Argentina). Propiciamos una actitud de respeto hacia todas las especies, entendiendo que no son “cosas” para ser utilizadas por el ser humano. Rechazamos todo tipo de explotación animal, incluyendo su uso como vestimenta, comida, entretenimiento y experimentación.
