listo para entrega

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="container-fluid ">
         <div class="row  ">
             <div class="col-sm-12 col-md-6 col-lg-4  bordercolor flex  ">
-              <div data-aos="fade-right" class="card border-3  " style="width: 18rem;">
+              <div data-aos="fade-right" class="card tamcard border-3  " style="width: 18rem;">
                     <img src="./img/Perrorescate.jpg" class="card-img-top  " alt="Perro rescatado">
                     <div class="card-body scroll">
                       <h2 class="card-title h5">Rescate</h2>
@@ -130,7 +130,7 @@
             </div>
             
             <div class="col-sm-12 col-md-6 col-lg-4  bordercolor flex   ">
-                <div  data-aos="flip-up" class="card" style="width: 18rem;">
+                <div  data-aos="flip-up" class="card tamcard" style="width: 18rem;">
                     <img src="./img/Perrovacuna.jpg" class="card-img-top" alt="Perro vacunado">
                     <div class="card-body scroll">
                       <h2 class="card-title h5 ">Control</h2>
@@ -142,7 +142,7 @@
             </div>
 
             <div class="col-sm-12 col-md-12 col-lg-4 bordercolor flex  ">
-                <div data-aos="fade-left" class="card" style="width: 18rem;">
+                <div data-aos="fade-left" class="card tamcard" style="width: 18rem;">
                     <img src="./img/Perroadopcion.jpg" class="card-img-top" alt="Perro adoptado">
                     <div class="card-body scroll">
                       <h2 class="card-title h5">Vida nueva</h2>
