--- a/pages/dona.html
+++ b/pages/dona.html
@@ -68,7 +68,7 @@
 
     <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-12">
+          <div data-aos="zoom-in-down" class="col-sm-12 col-md-12 col-lg-12">
             <img src="../img/Perrosdona.jpg" class="img-fluid" alt="Perros">
           </div>
           <div >
