--- a/pages/postulate.html
+++ b/pages/postulate.html
@@ -14,6 +14,9 @@
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -65,7 +68,7 @@
    
    
     <div class="container-fluid">
-        <div class="row">
+        <div   data-aos="fade-up" data-aos-duration="3000"class="row">
           <div class="col-lg-12 col-md-12 col-sm-12"></div>
           <div class="color-text">
             <h2 >Sumate a la Red de Hogares de Tránsito y Adopción de TERRITORIO ANIMAL
@@ -231,6 +234,10 @@
 
    
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> 
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script> 
 </div>
 </body>
 </html>
